# ETHShanghai-2025

./: .env  .gitmodules  LICENSE  PROJECT_SETUP.md  README.md  README1.md  SUBMISSION_WORKFLOW.md  Scaffold-ETH-2-架构指南.md  llms-full.txt  prerender-manifest.json  skillchain-development-document.md  skillchain-mvp-document.md  skillchain-task-priority.md  trace
projects/Born2Win-CrediNet/backend/: Cargo.toml  README.md  VERIFICATION_RESULT.md  credinet.db  env.example  run_tests.sh  service.sh
projects/Born2Win-CrediNet/backend/docs/: API_QUICK_REFERENCE.md  AUTHORIZATION_API_DOCS.md  AUTH_API_DOCS.md  CREDIT_API_DOCS.md  DID_API_DOCS.md  FRONTEND_API_GUIDE.md  IDENTITY_API_DOCS.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  SBT_API_DOCS.md
projects/Born2Win-CrediNet/backend/src/: main.rs
projects/Born2Win-CrediNet/backend/tests/: README.md  test_all_modules.sh
projects/ETHcli/evm-cli/: Cargo.toml  README.md  build.rs
projects/ETHcli/evm-cli/proto/: agent.proto
projects/ETHcli/evm-cli/src/: app.rs  cli.rs  grpc_client.rs  input.rs  main.rs  ui.rs  wallet.rs
projects/VaultCraft/: .env.example  .gitignore  README.md  foundry.toml  hl_dev.html  main.py  pyproject.toml  tmp_check_env.js  tmp_vault_artifact.json
projects/VaultCraft/apps/backend/: pyproject.toml  tmp_live_exec_check.py
projects/VaultCraft/apps/vaultcraft-frontend/: next.config.mjs  package.json  pnpm-lock.yaml
projects/VaultCraft/contracts/: Vault.sol
projects/VaultCraft/contracts/test/: Vault.t.sol
projects/VaultCraft/docs/architecture/: ARCHITECTURE.md  FRONTEND_SPEC.md  (+2 more)
projects/VaultCraft/hardhat/: coverage.json  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
projects/picker/chain-capability-mcp-server/: .gitignore  Cargo.toml  README.md
projects/picker/rust-agent-crate/: Cargo.toml  README.md
projects/picker/server/: Cargo.toml  README.md  TESTING.md  config.toml  openapi.json  spec.md
projects/proteinfolddao/ProteinFoldDAO/: DEMO_GUIDE.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
projects/py-polymarket/: .dockerignore  .env.example  .env.template  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  COMPLETE_USAGE_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  Makefile  PACKAGING_GUIDE.md  PROJECT_FEATURES_PACKAGE.md  QUICK_START.md  README.md  STRATEGY_FIX_GUIDE.md  __pycache__.code-workspace  _ast_check.py  _db_tmp.txt  _page.html  _patch_registry.txt  _stage_stats.py  _strategy_explain.txt  _todo_numbered.txt  debug_micro.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.template  extract_runner.py  extract_web.py  proxy_config.py.backup  pyproject.toml  start_comparison.bat  start_enhanced.bat  start_standard.bat  start_system.bat  temp_ps1.ps1  temp_run.py  temp_ticker_patch.txt  (+3 more)
projects/py-polymarket/apps/: __init__.py  backtest.py  demo.py  launcher.py  monitor.py  simulation.py  trader.py
projects/py-polymarket/archive/: README.md  analyze_8hour_results.py  analyze_results.py  analyze_test_results.py  anti_detection_solution.py  bright_data_rotating.py  browser_fingerprint_simulation.py  check_test_status.py  demo_enhanced_system.py  demo_simplified.py  diagnose_polymarket.py  dynamic_proxy_config.py  enhanced_bright_data.py  fix_proxy_config.py  fix_proxy_connection.py  monitor_data.py  monitor_logs.py  monitor_panel.py  monitor_performance.py  monitor_trading_status.py  network_diagnosis.py  network_diagnosis_fixed.py  network_diagnostic.py  network_resilient_test.py  network_test_simple.py  proxy_config_fixed.py  proxy_fix_guide.py  proxy_manager_guide.py  proxy_manager_optimization.py  proxy_manager_setup.py  proxy_monitor.py  proxy_solution_analysis.py  proxy_upgrade_guide.py  run_30min_test.py  run_30min_verification.py  run_8hour_offline_test.py  run_8hour_online_test.py  run_8hour_optimized_test.py  run_8hour_proxy_monitored.py  run_8hour_quick_verification.py  (+36 more)
projects/py-polymarket/brightdata_proxy_ca/: README - USE THE NEW CERTIFICATE.txt
projects/py-polymarket/config/: __init__.py  disaster_recovery_config.yml  env.py  honest_strategies.yaml  runtime.yaml  settings.py  strategies.yaml
projects/py-polymarket/docs/: CLOB_NETWORK_TEST_REPORT.md  CLOB_PROBLEM_SOLUTION.md  COMPREHENSIVE_CLOB_CONNECTIVITY_REPORT.md  DATA_FORMAT_FIX_REPORT.md  NETWORK_SOLUTION_REPORT.md  OPERATIONS_GUIDE.md  OPTIMIZATION_COMPLETE.md  OPTIMIZED_TODO.md  PREDICTION_MARKET_FIX.md  PROXY_DIAGNOSIS_REPORT.md  QUICK_START_GUIDE.md  README.md  SMART_PROXY_SYSTEM_REPORT.md  SSL_DEBUG_FINAL_REPORT.md  STREAMLINED_FRAMEWORK_SUMMARY.md  SYSTEM_STATUS_ANALYSIS.md  database_migration_guide.md  polymarket_graphql_migration_plan.md  tiered_exit_plan.md
projects/py-polymarket/k8s/: README.md  api-gateway.yaml  configmaps.yaml  data-collector.yaml  deploy.sh  namespace.yaml  network-policies.yaml  nginx-ingress.yaml  persistentvolumes.yaml  postgres.yaml  rbac.yaml  redis.yaml  risk-manager.yaml  secrets.yaml  strategy-engine.yaml  trading-engine.yaml  web-monitor.yaml
projects/py-polymarket/monitoring/: alertmanager.yml  prometheus.yml
projects/py-polymarket/reports/: decisions.jsonl  threshold_overrides.yaml
projects/py-polymarket/requirements/: base.txt  dev.txt  monitoring.txt
projects/py-polymarket/scripts/: analyze_event_driven.py  analyze_exit_reasons.py  analyze_simulation_reports.py  analyze_tp_sl_holding.py  analyze_yesterday.py  backtest_holding_grid.py  build_micro_arbitrage_pairs.py  build_threshold_overrides.py  derive_api_key.py  export_db.py  health_check.py  launch_online_stack.ps1  monitor_frontier.py  recommend_event_driven_params.py  register_scheduled_tasks.ps1  replay_order_store.py  report_daily_strategy_metrics.py  run_backtest_attribution.py  run_backtest_live.ps1  run_daily_analytics.ps1  run_offline_ab.py  run_online_ab.py  run_online_simulation.py  run_strategy_simulation.py  start_online_stack.bat  start_trade_stack.ps1  stop_stack.ps1  strategy_markets_winrate.py  summarise_ledger.py  summarize_backtest.ps1  test_rtds_ws.py  verify_market_fields.py
projects/py-polymarket/tests/: conftest.py
(+4115 files in other folders)
