[project]
name = "vaultcraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.6.1",
]
