[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-trading-system"
version = "1.0.0"
description = "功能完整的 Polymarket 自动交易系统 - 集成数据获取、策略分析、风险管理和实时监控"
authors = [
    {name = "Polymarket Trading System", email = "support@polymarket-trading.com"}
]
license = {text = "MIT"}
readme = "PROJECT_FEATURES_PACKAGE.md"
requires-python = ">=3.8"
keywords = ["polymarket", "trading", "automation", "cryptocurrency", "prediction", "markets", "trading-bot", "fintech"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]

dependencies = [
    "aiohttp>=3.8.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "web3>=6.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "python-dotenv>=0.19.0",
    "eth-account>=0.8.0",
    "pydantic>=1.10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "isort>=5.10.0",
]
docker = [
    "docker>=6.0.0",
    "docker-compose>=1.29.0"
]
monitoring = [
    "prometheus-client>=0.15.0",
    "grafana-api>=1.0.3"
]
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "isort>=5.10.0",
    "docker>=6.0.0",
    "docker-compose>=1.29.0",
    "prometheus-client>=0.15.0",
    "grafana-api>=1.0.3"
]

[project.urls]
Homepage = "https://github.com/polymarket/trading-system"
Documentation = "https://github.com/polymarket/trading-system/wiki"
Repository = "https://github.com/polymarket/trading-system"
"Bug Tracker" = "https://github.com/polymarket/trading-system/issues"
"Source Code" = "https://github.com/polymarket/trading-system"

[project.scripts]
polymarket-trader = "apps.trader:main"
polymarket-monitor = "apps.monitor:main"
polymarket-launch = "apps.launcher:main"
polymarket-backtest = "apps.backtest:main"
polymarket-demo = "apps.demo:main"
polymarket-simulate = "apps.simulation:main"

[tool.setuptools]
[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "build*", "dist*"]

[tool.setuptools.package-data]
"*" = [
    "*.json",
    "*.md",
    "*.txt",
    "*.yml",
    "*.yaml",
    "brightdata_proxy_ca/*.crt",
    "k8s/*.yaml"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
