[package]
name = "pickers-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = "0.7"
hex = "0.4"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
jsonwebtoken = "9.0"
bcrypt = "0.17.1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
regex = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.15"
# OpenAPI dependencies
utoipa = { version = "5.4", features = ["axum_extras", "debug", "chrono", "uuid"] }
alloy = "1.0.30"
aes-gcm = "0.10.3"
base64 = "0.22.1"
url = "2.5.7"
futures-util = "0.3.31"
log = "0.4"

[dev-dependencies]
tokio-test = { version = "0.4" }
axum-test = { version="18.1.0", features = ["all"] }
tower = "0.5"
tower-test = "0.4"
tempfile = "3.0"
mockall = "0.13.1"
serial_test = "3.0"
pretty_assertions = "1.0"
